--- a/sarasa/sarasa.cbp
+++ b/sarasa/sarasa.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="BatallaNaval" />
+		<Option title="sarasa" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/BatallaNaval" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/sarasa" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/BatallaNaval" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/sarasa" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -31,14 +31,6 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
-		<Unit filename="battleship.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="battleship.h" />
-		<Unit filename="connection.c">
-			<Option compilerVar="CC" />
-		</Unit>
-		<Unit filename="connection.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
